// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message rendering 1`] = `
<div
  className="message"
>
  <h2>
    Testing
  </h2>
  <p>
    Message content
  </p>
</div>
`;

exports[`Message rendering with icon 1`] = `
<div
  class="message"
>
  <h2>
    Sample icon SVGTesting
  </h2>
  <p>
    Message content
  </p>
</div>
`;
